--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
   <div class="container">
     <h1 class="mb-4">JSON Schema Generator</h1>
     <div class="mb-3">
-      <button id="addPropBtn" class="btn btn-primary">Add Property</button>
-      <button id="generateBtn" class="btn btn-success">Generate JSON Schema</button>
+      <textarea id="loadInput" class="form-control" rows="4" placeholder="Paste existing JSON Schema here"></textarea>
+      <button id="loadBtn" class="btn btn-secondary mt-2">Load Schema</button>
+      <button id="addPropBtn" class="btn btn-primary mt-2">Add Property</button>
+      <button id="generateBtn" class="btn btn-success mt-2">Generate JSON Schema</button>
     </div>
+
     <div class="row">
       <div class="col-md-6">
         <h4>Properties</h4>
@@ -21,7 +24,7 @@
       <div class="col-md-6">
         <h4>Resulting JSON Schema</h4>
         <pre id="output" class="bg-light p-2 rounded" style="height: 400px; overflow:auto;"></pre>
-      <div class="mt-3">
+<div class="mt-3">
         <label for="escapedOutput" class="form-label">Escaped JSON Schema</label>
         <textarea id="escapedOutput" class="form-control" rows="6" readonly></textarea>
       </div>
@@ -93,12 +96,12 @@
     </div>
   </div>
 
-  <!-- Bootstrap JS (required before any bootstrap.V modal usage) -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
   <script>
     document.addEventListener('DOMContentLoaded', () => {
-      const schema = { type: 'object', properties: {}, required: [] };
+      let schema = { type: 'object', properties: {}, required: [] };
+
+
       // preload example schema
       Object.assign(schema, {
         properties: {
@@ -128,7 +131,7 @@
       });
       schema.properties.items.items.required = ['description','unitPrice'];
 
-      // DOM refs using bootstrap now defined
+      let editKey = null;
       const propModal = new bootstrap.Modal(document.getElementById('propModal'));
       const propForm = document.getElementById('propForm');
       const propName = document.getElementById('propName');
@@ -147,67 +150,120 @@
         itemsGroup.classList.toggle('d-none', propType.value !== 'array');
         subPropsSection.classList.toggle('d-none', itemType.value !== 'object');
       }
-
       function resetForm() {
+        editKey = null;
         propForm.reset(); updateFormFields(); subPropsList.innerHTML = '';
+      }
+      function fillForm(key) {
+        const prop = schema.properties[key];
+        editKey = key;
+        propName.value = key;
+        propType.value = prop.type;
+        propDesc.value = prop.description || '';
+        propFormat.value = prop.format || '';
+        document.getElementById('propRequired').checked = schema.required.includes(key);
+        updateFormFields();
+        if (prop.type === 'array' && prop.items.type === 'object') {
+          itemType.value = 'object'; updateFormFields();
+          subPropsList.innerHTML = '';
+          Object.entries(prop.items.properties).forEach(([k,v]) => {
+            const li = document.createElement('li'); li.className = 'list-group-item d-flex justify-content-between';
+            li.textContent = `${k} (${v.type}) - ${v.description||''}`;
+            li.dataset.key = k; li.dataset.type = v.type; li.dataset.desc = v.description||'';
+            li.dataset.fmt = v.format||''; li.dataset.req = (prop.items.required||[]).includes(k);
+            const x = document.createElement('button'); x.className = 'btn btn-sm btn-outline-danger'; x.textContent = 'X'; x.onclick = () => li.remove();
+            li.append(x); subPropsList.append(li);
+          });
+        }
       }
 
       function renderProps() {
         const list = document.getElementById('propsList'); list.innerHTML = '';
         Object.entries(schema.properties).forEach(([key, prop]) => {
-          const li = document.createElement('li'); li.className='list-group-item d-flex justify-content-between align-items-start';
-          const info = document.createElement('div'); info.className='ms-2 me-auto';
+          const li = document.createElement('li'); li.className = 'list-group-item d-flex justify-content-between align-items-start';
+          const info = document.createElement('div'); info.className = 'ms-2 me-auto';
           info.innerHTML = `<div class='fw-bold'>${key}</div><small>${prop.type}${prop.format?` (${prop.format})`:''}</small><br>${prop.description||''}`;
-          const del = document.createElement('button'); del.className='btn btn-sm btn-danger'; del.textContent='Delete';
-          del.onclick = ()=>{ delete schema.properties[key]; schema.required = schema.required.filter(r=>r!==key); renderProps(); };
-          li.append(info, del);
+          const btns = document.createElement('div');
+          const edit = document.createElement('button'); edit.className = 'btn btn-sm btn-outline-secondary me-1'; edit.textContent = 'Edit';
+          edit.onclick = () => { fillForm(key); propModal.show(); };
+          const del = document.createElement('button'); del.className = 'btn btn-sm btn-danger'; del.textContent = 'Delete';
+          del.onclick = () => { delete schema.properties[key]; schema.required = schema.required.filter(r => r !== key); renderProps(); };
+          btns.append(edit, del);
+          li.append(info, btns);
           list.append(li);
         });
       }
 
+      // Load existing JSON
+      document.getElementById('loadBtn').onclick = () => {
+        try {
+          const parsed = JSON.parse(document.getElementById('loadInput').value);
+          schema = { type: parsed.type || 'object', properties: parsed.properties || {}, required: parsed.required || [] };
+          renderProps();
+          alert('Schema loaded successfully!');
+        } catch (e) {
+          alert('Invalid JSON: ' + e.message);
+        }
+      };
+
+      // Add new property
       document.getElementById('addPropBtn').onclick = () => { resetForm(); propModal.show(); };
       propType.onchange = updateFormFields; itemType.onchange = updateFormFields;
-
-      addSubPropBtn.onclick = ()=>{
-        const name = prompt('Sub-property name:'); if(!name) return;
-        const t = prompt('Type:', 'string'); const d = prompt('Description:',''); const fmt = t==='string'?prompt('Format (optional):',''):'';
+      addSubPropBtn.onclick = () => {
+        const name = prompt('Sub-property name:'); if (!name) return;
+        const t = prompt('Type:', 'string'); const d = prompt('Description:', ''); const fmt = t === 'string' ? prompt('Format (optional):', '') : '';
         const r = confirm('Required?');
-        const li = document.createElement('li'); li.className='list-group-item d-flex justify-content-between';
+        const li = document.createElement('li'); li.className = 'list-group-item d-flex justify-content-between';
         li.textContent = `${name} (${t}) - ${d}`;
-        li.dataset.key=name; li.dataset.type=t; li.dataset.desc=d; li.dataset.fmt=fmt; li.dataset.req=r;
-        const x = document.createElement('button'); x.className='btn btn-sm btn-outline-danger'; x.textContent='X'; x.onclick=()=>li.remove();
+        li.dataset.key = name; li.dataset.type = t; li.dataset.desc = d; li.dataset.fmt = fmt; li.dataset.req = r;
+        const x = document.createElement('button'); x.className = 'btn btn-sm btn-outline-danger'; x.textContent = 'X'; x.onclick = () => li.remove();
         li.append(x); subPropsList.append(li);
       };
 
+      // Save property
       document.getElementById('savePropBtn').onclick = () => {
-        const name=propName.value.trim(); if(!name) return;
-        const type=propType.value; const desc=propDesc.value.trim(); const fmt=propFormat.value.trim(); const req=propForm.propRequired.checked;
-        const obj={ type, description: desc || undefined };
-        if(type==='string' && fmt) obj.format=fmt;
-        if(type==='array'){ obj.items={ type: itemType.value };
-          if(itemType.value==='object'){ obj.items.properties={}; obj.items.required=[];
-            subPropsList.querySelectorAll('li').forEach(li=>{
-              const k=li.dataset.key; const t=li.dataset.type; const d=li.dataset.desc; const f=li.dataset.fmt; const r=li.dataset.req;
-              obj.items.properties[k]={ type:t, description: d||undefined, format: f||undefined };
-              if(r) obj.items.required.push(k);
-            }); if(!obj.items.required.length) delete obj.items.required;
+        const name = propName.value.trim(); if (!name) return;
+        if (editKey && editKey !== name) {
+          delete schema.properties[editKey];
+          schema.required = schema.required.filter(r => r !== editKey);
+        }
+        const obj = { type: propType.value };
+        if (propDesc.value) obj.description = propDesc.value;
+        if (propType.value === 'string' && propFormat.value) obj.format = propFormat.value;
+        if (propType.value === 'array') {
+          obj.items = { type: itemType.value };
+          if (itemType.value === 'object') {
+            obj.items.properties = {};
+            obj.items.required = [];
+            subPropsList.querySelectorAll('li').forEach(li => {
+              const k = li.dataset.key; const t = li.dataset.type; const d = li.dataset.desc;
+              const f = li.dataset.fmt; const r = li.dataset.req;
+              obj.items.properties[k] = { type: t };
+              if (d) obj.items.properties[k].description = d;
+              if (f) obj.items.properties[k].format = f;
+              if (r === 'true' || r === true) obj.items.required.push(k);
+            });
+            if (!obj.items.required.length) delete obj.items.required;
           }
         }
-        if(type==='object'){ obj.properties={}; }
-        schema.properties[name]=obj;
-        if(req) schema.required.push(name); else schema.required=schema.required.filter(r=>r!==name);
+        if (propType.value === 'object') obj.properties = {};
+        schema.properties[name] = obj;
+        if (document.getElementById('propRequired').checked) schema.required.push(name);
+        else schema.required = schema.required.filter(r => r !== name);
         propModal.hide(); renderProps();
       };
 
-      document.getElementById('generateBtn').onclick = ()=>{
-          // 1) render the normal pretty schema
-          document.getElementById('output').textContent = JSON.stringify(schema, null, 2);
+      // Generate JSON Schema
+      document.getElementById('generateBtn').onclick = () => {
+        document.getElementById('output').textContent = JSON.stringify(schema, null, 2);
 
           // 2) render the escaped, one-line JSON with all quotes back‑slashed
           const raw = JSON.stringify(schema);
           const escaped = raw.replace(/"/g, '\\"');
           document.getElementById('escapedOutput').value = escaped;
-        };
+      };
+
+      // Initial render
       renderProps();
     });
   </script>
